--- a/app/src/main/res/layout/channelprop.xml
+++ b/app/src/main/res/layout/channelprop.xml
@@ -20,11 +20,13 @@
 
     <ImageView
         android:id="@+id/thumbNailView"
-        android:layout_width="386dp"
+        android:layout_width="0dp"
         android:layout_height="142dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="122dp"
+        app:layout_constraintBottom_toTopOf="@+id/channel_description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/channel_name"
@@ -42,11 +44,11 @@
 
     <TextView
         android:id="@+id/channel_description"
-        android:layout_width="402dp"
+        android:layout_width="0dp"
         android:layout_height="352dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:autoLink="web|email"
         android:paddingLeft="36dp"
@@ -54,7 +56,7 @@
         android:textIsSelectable="true"
         app:layout_constraintBottom_toTopOf="@+id/subscribe_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.739"
+        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/thumbNailView"
         app:layout_constraintVertical_bias="1.0" />
