--- a/app/src/main/res/layout/videolist.xml
+++ b/app/src/main/res/layout/videolist.xml
@@ -49,9 +49,9 @@ cardview:cardUseCompatPadding="true">
 
     <TextView
         android:id="@+id/author"
-        android:layout_width="411dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#80FFFFFF"
+        android:background="#80E9460C"
         android:elevation="200dp"
         android:ems="10"
         android:text=""
