Working on putting comments in subtitles during full screen.

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -139,12 +139,11 @@
                 android:text="load bitchute subscriptions" />
 
             <EditText
-                android:id="@+id/feedage"
-                android:layout_width="wrap_content"
+                android:id="@+id/feed_age"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="textPersonName"
-                android:text="how many days of feed to keeo" />
+                android:inputType="textPersonName" />
 
         </LinearLayout>
     </ScrollView>
