--- a/app/src/main/res/layout/videolist.xml
+++ b/app/src/main/res/layout/videolist.xml
@@ -1,74 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:cardview="http://schemas.android.com/apk/res-auto"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:layout_marginBottom="5dp"
-cardview:cardCornerRadius="2dp"
-cardview:cardElevation="3dp"
-cardview:cardUseCompatPadding="true">
-
-<RelativeLayout
-    android:id="@+id/RecView"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:cardview="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    cardview:cardCornerRadius="2dp"
+    cardview:cardElevation="3dp"
+    cardview:cardUseCompatPadding="true">
 
-    <ImageView
-        android:id="@+id/thumbnail"
+    <RelativeLayout
+        android:id="@+id/RecView"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:layout_alignParentTop="true"
-        android:elevation="0dp"
-        android:scaleType="centerCrop" />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/statusView"
-        android:layout_width="match_parent"
-        android:layout_height="16dp"
-        android:layout_above="@+id/movieName"
-        android:layout_alignParentStart="true"
-        android:background="@null"
-        android:layout_marginBottom="4dp"
-        />
+        <ImageView
+            android:id="@+id/thumbnail"
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+            android:layout_alignParentTop="true"
+            android:elevation="0dp"
+            android:scaleType="centerCrop" />
 
-    <TextView
-        android:id="@+id/movieName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/thumbnail"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="12dp"
-        android:elevation="200dp"
-        android:maxLines="3"
-        android:padding="8dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-        android:textColor="#444"
-        android:textSize="18dp"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/statusView"
+            android:layout_width="match_parent"
+            android:layout_height="16dp"
+            android:layout_above="@+id/movieName"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="4dp"
+            android:background="@null" />
 
-    <TextView
-        android:id="@+id/author"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#80E9460C"
-        android:elevation="200dp"
-        android:ems="10"
-        android:text=""
-        android:textColor="#FFEB3B"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/movieName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/thumbnail"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="12dp"
+            android:elevation="200dp"
+            android:maxLines="3"
+            android:padding="8dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+            android:textColor="#444"
+            android:textSize="18dp"
+            android:textStyle="bold" />
 
-    <ImageView
-        android:id="@+id/videoserviceicon"
-        android:layout_width="37dp"
-        android:layout_height="28dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="128dp"
-        android:elevation="200dp"
-        android:visibility="visible" />
+        <TextView
+            android:id="@+id/author"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#80E9460C"
+            android:elevation="200dp"
+            android:ems="10"
+            android:text=""
+            android:textColor="#FFEB3B"
+            android:textStyle="bold" />
 
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/videoserviceicon"
+            android:layout_width="37dp"
+            android:layout_height="28dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="128dp"
+            android:elevation="200dp"
+            android:visibility="visible" />
+
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
