--- a/app/src/main/res/layout/channellist.xml
+++ b/app/src/main/res/layout/channellist.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:cardview="http://schemas.android.com/apk/res-auto"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:layout_marginBottom="5dp"
-cardview:cardCornerRadius="2dp"
-cardview:cardElevation="3dp"
-cardview:cardUseCompatPadding="true">
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:cardview="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="5dp"
+    android:background="@color/colorPrimaryDark"
+    cardview:cardCornerRadius="2dp"
+    cardview:cardElevation="3dp"
+    cardview:cardUseCompatPadding="true">
 
     <RelativeLayout
         android:id="@+id/ChannelRecView"
         android:layout_width="422dp"
-        android:layout_height="130dp">
+        android:layout_height="130dp"
+        android:background="#609C27B0">
 
         <ImageView
             android:id="@+id/channelthumbnail"
@@ -24,6 +25,7 @@ cardview:cardUseCompatPadding="true">
             android:layout_marginTop="0dp"
             android:layout_marginEnd="291dp"
             android:layout_marginBottom="33dp"
+            android:background="#659C27B0"
             android:scaleType="centerCrop" />
 
         <TextView
@@ -76,7 +78,6 @@ cardview:cardUseCompatPadding="true">
             android:layout_marginTop="102dp"
             android:elevation="200dp"
             android:visibility="visible" />
-
 
 
     </RelativeLayout>
