--- a/app/src/main/res/layout/smallvideolist.xml
+++ b/app/src/main/res/layout/smallvideolist.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="120dp"
     android:layout_margin="5dp"
     cardview:cardCornerRadius="2dp"
     cardview:cardElevation="3dp"
@@ -11,40 +11,36 @@
     <RelativeLayout
         android:id="@+id/RecView2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimaryDark"
+        android:backgroundTint="#1AFFFFFF"
+        android:foregroundTint="#1AFFFFFF">
 
         <ImageView
             android:id="@+id/thumbnail2"
             android:layout_width="172dp"
-            android:layout_height="107dp"
+            android:layout_height="110dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="0dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="0dp"
+            android:backgroundTint="@color/sicbackground"
             android:elevation="0dp"
-            android:scaleType="centerCrop" />
-
-        <TextView
-            android:id="@+id/statusView2"
-            android:layout_width="match_parent"
-            android:layout_height="16dp"
-            android:layout_above="@+id/movieName"
-            android:layout_alignParentStart="true"
-            android:layout_marginBottom="4dp"
-            android:background="@null" />
+            android:scaleType="centerCrop"
+            android:tint="#1A9C27B0" />
 
         <TextView
             android:id="@+id/movieName2"
             android:layout_width="214dp"
-            android:layout_height="69dp"
+            android:layout_height="75dp"
             android:layout_below="@+id/thumbnail"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="false"
-            android:layout_marginLeft="2dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="2dp"
-            android:layout_marginRight="2dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="35dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginRight="0dp"
             android:background="#80000000"
             android:elevation="200dp"
             android:maxLines="3"
@@ -56,15 +52,15 @@
 
         <TextView
             android:id="@+id/author2"
-            android:layout_width="216dp"
+            android:layout_width="214dp"
             android:layout_height="35dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="0dp"
-            android:background="#80E9460C"
+            android:background="#D0B95304"
             android:elevation="200dp"
             android:ems="10"
-            android:paddingLeft="16dp"
+            android:paddingLeft="8dp"
             android:text=""
             android:textColor="#FFEB3B"
             android:textStyle="bold" />
