--- a/app/src/main/res/values/sicbackground.xml
+++ b/app/src/main/res/values/sicbackground.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="sicbackground">#FFFFFF</color>
+    <color name="sicbackground">#11F7F2F8</color>
 </resources>
