--- a/app/src/main/res/layout/fragment_channel.xml
+++ b/app/src/main/res/layout/fragment_channel.xml
@@ -3,12 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="16dp"
+    android:layout_marginTop="24dp"
+    android:layout_marginRight="16dp"
     tools:context=".ChannelFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/crv"
         android:layout_width="match_parent"
-        android:layout_height="658dp"
+        android:layout_height="match_parent"
         android:background="@color/colorPrimaryDark"
         android:paddingTop="22dp"
         android:paddingBottom="20dp"
