--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -7,11 +7,16 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="-403dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:orientation="vertical">
 
             <TextView
@@ -46,13 +51,24 @@
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
+            <Button
+                android:id="@+id/load_youtube"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:text="load youtube subscriptions" />
+
             <RadioGroup
                 android:id="@+id/youtubeplayerradioGroup"
-                android:layout_width="199dp"
-                android:layout_height="112dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:duplicateParentState="false"
+                android:layoutDirection="ltr"
+                android:layoutMode="clipBounds"
+                android:orientation="horizontal"
+                android:textDirection="ltr">
+
 
                 <RadioButton
                     android:id="@+id/youtubeuse_vlc"
@@ -61,10 +77,18 @@
                     android:text="VLC" />
 
                 <RadioButton
-                    android:id="@+id/youtubeuse_webview"
+                    android:id="@+id/youtubeuse_exo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:text="exo " />
+
+                <RadioButton
+                    android:id="@+id/youtubeuse_webview"
+                    android:layout_width="56dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layoutDirection="ltr"
                     android:text="Webview" />
 
                 <RadioButton
@@ -72,16 +96,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="System Default" />
-            </RadioGroup>
+                    android:text="System" />
 
-            <Button
-                android:id="@+id/load_youtube"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:text="load youtube subscriptions" />
+            </RadioGroup>
 
             <TextView
                 android:id="@+id/textView4"
@@ -94,11 +111,12 @@
 
             <RadioGroup
                 android:id="@+id/bitchuteplayerradioGroup"
-                android:layout_width="182dp"
-                android:layout_height="154dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="2dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="2dp"
+                android:orientation="horizontal">
 
                 <RadioButton
                     android:id="@+id/bitchuteuse_vlc"
@@ -107,25 +125,29 @@
                     android:text="VLC" />
 
                 <RadioButton
+                    android:id="@+id/bitchuteuse_exo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="exo " />
+
+                <RadioButton
+                    android:id="@+id/bitchuteuse_native"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Vidview " />
+
+                <RadioButton
                     android:id="@+id/bitchuteuse_webview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:text="Webview" />
 
                 <RadioButton
                     android:id="@+id/bitchuteuse_default"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="System Default" />
+                    android:text="System" />
 
-                <RadioButton
-                    android:id="@+id/bitchuteuse_native"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Built in player" />
             </RadioGroup>
 
             <Button
@@ -138,12 +160,30 @@
                 android:layout_marginBottom="8dp"
                 android:text="load bitchute subscriptions" />
 
-            <EditText
-                android:id="@+id/feed_age"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="textPersonName" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="208dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_weight="1"
+                    android:fontFamily="serif"
+                    android:text="days to keep"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/feed_age"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:inputType="textPersonName"
+                    android:text="7" />
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
