--- a/app/src/main/res/layout/videoprop.xml
+++ b/app/src/main/res/layout/videoprop.xml
@@ -17,7 +17,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.891"
-        app:layout_constraintStart_toEndOf="@+id/subscribe_button"
+        app:layout_constraintStart_toEndOf="@+id/cancel_button"
         app:layout_constraintTop_toBottomOf="@+id/channelDetails" />
 
     <ImageView
