--- a/app/src/main/res/layout/fragment_exoplayer.xml
+++ b/app/src/main/res/layout/fragment_exoplayer.xml
@@ -11,7 +11,9 @@
         android:id="@+id/videoFullScreenPlayer"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="32dp"
+        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:background="#A6000000"
         app:layout_constraintBottom_toTopOf="@+id/exoviewcomments"
